samples/_failures_safe/1761532001_1459cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f02e8a6.c: In function ‘main’:
./samples/SAFE/__tmp_4f02e8a6.c:188:5: error: expected expression at end of input
  188 |     int running =
      |     ^~~
./samples/SAFE/__tmp_4f02e8a6.c:188:5: error: expected declaration or statement at end of input
